--- a/BlogRazorPage1/Areas/Admin1/Views/Home/Index.cshtml
+++ b/BlogRazorPage1/Areas/Admin1/Views/Home/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model BlogRazorPage.Areas.Admin.Models.ckeditorViewModel
+﻿@model             ckeditorViewModel
 @{
     Layout = "AdminLayout/_Admin1Layout";
     ViewData["Title"] = "AddBlog2";
