--- a/BlogRazorPage1/Areas/Admin1/Views/Post/ckeditor.cshtml
+++ b/BlogRazorPage1/Areas/Admin1/Views/Post/ckeditor.cshtml
@@ -1,5 +1,5 @@
 ﻿
-@model BlogRazorPage.Areas.Admin.Models.ckeditorViewModel
+@model             ckeditorViewModel
 @{
     Layout = "Shared/AdminLayout/_AdminLayout";
     ViewData["Title"] = "AddBlog2";
