--- a/BlogRazorPage1/Pages/Admin/Blog/Edit.cshtml
+++ b/BlogRazorPage1/Pages/Admin/Blog/Edit.cshtml
@@ -28,7 +28,7 @@
                     <div class="row">
                         <div class="col-12">
                             <div class="row">
-                                <div class="col-sm-8 m-auto">
+                 @*                <div class="col-sm-8 m-auto"> *@
                                     <div class="card">
                                         <div class="card-body">
                                             <div class="card-header-2">
@@ -131,7 +131,7 @@
                                             </form>
                                         </div>
                                     </div>
-                                </div>
+                           @*      </div> *@
                             </div>
                         </div>
                     </div>
